// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Layer Tree Snapshot Tests > renders complex layer hierarchy with snapshot 1`] = `
[
  ScatterplotLayer {
    "count": 0,
    "id": "scatterplot-1",
    "internalState": null,
    "lifecycle": "Awaiting state",
    "parent": null,
    "props": {
      "getPosition": [Function],
      "getRadius": [Function],
      "id": "scatterplot-1",
      "radiusScale": 1,
      Symbol(component): [Circular],
      Symbol(asyncPropOriginal): {},
      Symbol(asyncPropResolved): {
        "data": [
          {
            "position": [
              0,
              0,
            ],
            "radius": 10,
          },
          {
            "position": [
              1,
              1,
            ],
            "radius": 20,
          },
        ],
      },
    },
  },
  ScatterplotLayer {
    "count": 1,
    "id": "scatterplot-2",
    "internalState": null,
    "lifecycle": "Awaiting state",
    "parent": null,
    "props": {
      "getPosition": [Function],
      "getRadius": [Function],
      "id": "scatterplot-2",
      "radiusScale": 2,
      Symbol(component): [Circular],
      Symbol(asyncPropOriginal): {},
      Symbol(asyncPropResolved): {
        "data": [
          {
            "position": [
              0,
              0,
            ],
            "radius": 10,
          },
          {
            "position": [
              1,
              1,
            ],
            "radius": 20,
          },
        ],
      },
    },
  },
  PathLayer {
    "count": 2,
    "id": "path-1",
    "internalState": null,
    "lifecycle": "Awaiting state",
    "parent": null,
    "props": {
      "getPath": [Function],
      "id": "path-1",
      Symbol(component): [Circular],
      Symbol(asyncPropOriginal): {},
      Symbol(asyncPropResolved): {
        "data": [
          {
            "path": [
              [
                0,
                0,
              ],
              [
                1,
                1,
              ],
            ],
          },
        ],
      },
    },
  },
]
`;

exports[`Layer Tree Snapshot Tests > snapshots with property matchers for dynamic values 1`] = `
[
  ScatterplotLayer {
    "count": 3,
    "id": "dynamic-1",
    "internalState": null,
    "lifecycle": "Awaiting state",
    "parent": null,
    "props": {
      "id": "dynamic-1",
      Symbol(component): [Circular],
      Symbol(asyncPropOriginal): {},
      Symbol(asyncPropResolved): {
        "data": [
          {
            "x": 1,
            "y": 2,
          },
        ],
      },
    },
  },
  PathLayer {
    "count": 4,
    "id": "dynamic-2",
    "internalState": null,
    "lifecycle": "Awaiting state",
    "parent": null,
    "props": {
      "id": "dynamic-2",
      Symbol(component): [Circular],
      Symbol(asyncPropOriginal): {},
      Symbol(asyncPropResolved): {
        "data": [
          {
            "path": [
              [
                0,
                0,
              ],
            ],
          },
        ],
      },
    },
  },
]
`;
